Fix all test of router and apis

--- a/src/engine/source/api/CMakeLists.txt
+++ b/src/engine/source/api/CMakeLists.txt
@@ -51,7 +51,7 @@ target_link_libraries(api
     kvdb::ikvdb
     metrics
     # router
-    router2::irouter
+    router::irouter
     store::fileDriver
     store::istore
     yml
