--- a/src/engine/benchmark/CMakeLists.txt
+++ b/src/engine/benchmark/CMakeLists.txt
@@ -34,4 +34,4 @@ add_subdirectory(logicExpression)
 add_subdirectory(base)
 add_subdirectory(helperFunctions)
 add_subdirectory(json)
-add_subdirectory(queue)
+# add_subdirectory(queue) Move this
