--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -20,6 +20,7 @@ include_directories(${SRC_FOLDER}/external/bzip2)
 include_directories(${SRC_FOLDER}/external/cJSON)
 include_directories(${SRC_FOLDER}/external/msgpack/include)
 include_directories(${SRC_FOLDER}/shared_modules/common)
+include_directories(${SRC_FOLDER}/shared_modules/router/include/)
 add_definitions(-DWAZUH_UNIT_TESTING)
 
 # Wazuh libraries
