Add address sanitizer on indexer connector test tool when is compiled in debug mode.

--- a/src/shared_modules/indexer_connector/testtool/CMakeLists.txt
+++ b/src/shared_modules/indexer_connector/testtool/CMakeLists.txt
@@ -5,7 +5,7 @@ file(GLOB INDEXER_CONNECTOR_TOOL_SRC
     )
 
 # Add address sanitizer
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address -fno-omit-frame-pointer")
 
 add_executable(indexer_connector_tool
     ${INDEXER_CONNECTOR_TOOL_SRC}
