Adding flatbuffer decoding to router test tool

--- a/src/shared_modules/router/testtool/CMakeLists.txt
+++ b/src/shared_modules/router/testtool/CMakeLists.txt
@@ -8,4 +8,6 @@ file(GLOB ROUTER_TEST_TOOL_SRC "*.cpp")
 
 add_executable(router_test_tool ${ROUTER_TEST_TOOL_SRC})
 
-target_link_libraries(router_test_tool router pthread)
+target_link_libraries(router_test_tool router pthread flatbuffers)
+target_include_directories(router_test_tool PUBLIC ${SRC_FOLDER}/external/flatbuffers/include)
+target_link_directories(router_test_tool PUBLIC ${SRC_FOLDER}/external/flatbuffers/build)
