Obtaining the router handle at startup for wazuh-remoted

--- a/src/unit_tests/remoted/CMakeLists.txt
+++ b/src/unit_tests/remoted/CMakeLists.txt
@@ -76,7 +76,7 @@ list(APPEND remoted_flags "-Wl,--wrap,_merror -Wl,--wrap,_mwarn -Wl,--wrap,accep
                             -Wl,--wrap,w_mutex_lock -Wl,--wrap,w_mutex_unlock \
                             -Wl,--wrap,wnotify_add -Wl,--wrap,SendMSG -Wl,--wrap,rem_inc_recv_evt \
                             -Wl,--wrap,OS_DupKeyEntry -Wl,--wrap,OS_FreeKey ${DEBUG_OP_WRAPPERS} \
-                            -Wl,--wrap,router_provider_send -Wl,--wrap,router_provider_create \
+                            -Wl,--wrap,router_provider_send \
                             -Wl,--wrap,w_flatcc_parse_json -Wl,--wrap,w_flatcc_free_buffer")
 
 list(APPEND remoted_names "test_netbuffer")
