Add warning message for deprecated TLS versions

--- a/api/api/configuration/api.yaml
+++ b/api/api/configuration/api.yaml
@@ -11,7 +11,7 @@
 #  cert: "server.crt"
 #  use_ca: False
 #  ca: "ca.crt"
-#  ssl_protocol: "TLSv1.2"
+#  ssl_protocol: "auto"
 #  ssl_ciphers: ""
 
 # Modify API's intervals (time in seconds)
