--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -9967,7 +9967,7 @@ paths:
                           cert: "/var/ossec/api/configuration/ssl/server.crt"
                           use_ca: false
                           ca: "/var/ossec/api/configuration/ssl/ca.crt"
-                          ssl_protocol: "TLSv1.2"
+                          ssl_protocol: "auto"
                           ssl_ciphers: ""
                         logs:
                           level: info
@@ -10005,7 +10005,7 @@ paths:
                           cert: "/var/ossec/api/configuration/ssl/server.crt"
                           use_ca: false
                           ca: "/var/ossec/api/configuration/ssl/ca.crt"
-                          ssl_protocol: "TLSv1.2"
+                          ssl_protocol: "auto"
                           ssl_ciphers: ""
                         logs:
                           path: /var/ossec/logs/api.log
@@ -10042,7 +10042,7 @@ paths:
                           cert: "/var/ossec/api/configuration/ssl/server.crt"
                           use_ca: false
                           ca: "/var/ossec/api/configuration/ssl/ca.crt"
-                          ssl_protocol: "TLSv1.2"
+                          ssl_protocol: "auto"
                           ssl_ciphers: ""
                         logs:
                           path: /var/ossec/logs/api.log
@@ -12901,7 +12901,7 @@ paths:
                           cert: "/var/ossec/api/configuration/ssl/server.crt"
                           use_ca: false
                           ca: "/var/ossec/api/configuration/ssl/ca.crt"
-                          ssl_protocol: "TLSv1.2"
+                          ssl_protocol: "auto"
                           ssl_ciphers: ""
                         access:
                           max_login_attempts: 50
