Set CURL_DEP variable to avoid libcurl.so dependency on libsysinfo.so

--- a/src/data_provider/CMakeLists.txt
+++ b/src/data_provider/CMakeLists.txt
@@ -221,6 +221,7 @@ endif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
 target_link_libraries(sysinfo wazuhext)
 
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+  set(CURL_DEP "wazuhext")
   target_link_libraries(sysinfo urlrequest)
   if(CMAKE_CHECK_CENTOS5)
       set(USE_HTTP 1)
