Applied changes from CR

--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -4378,7 +4378,7 @@ components:
                   format: int32
         uuid:
           type: string
-          description: "Identificator of the Wazuh instance"
+          description: "Identifier of the Wazuh instance"
 
     # Rules models
     RuleFile:
