--- a/api/test/integration/test_decoder_endpoints.tavern.yaml
+++ b/api/test/integration/test_decoder_endpoints.tavern.yaml
@@ -315,6 +315,33 @@ stages:
           failed_items: []
           total_affected_items: 0
           total_failed_items: !anyint
+  
+  - name: Get decoders using a nested query
+    request:
+      verify: False
+      <<: *get_decoders
+      params:
+        q: status=enabled;(name=agent-buffer,name=wazuh)
+    response:
+      status_code: 200
+      json:
+        error: 0
+        data:
+          affected_items: !anything
+          failed_items: []
+          total_affected_items: 2
+          total_failed_items: !anyint
+
+  - name: Try to get decoders using an invalid query
+    request:
+      verify: False
+      <<: *get_decoders
+      params:
+        q: status
+    response:
+      status_code: 400
+      json:
+        error: 1407
 
   - name: Get distinct decoders
     request:
