Fix typo that prevented tabs as whitespace

--- a/ruleset/sca/debian/cis_debian10.yml
+++ b/ruleset/sca/debian/cis_debian10.yml
@@ -2924,8 +2924,8 @@ checks:
     condition: all
     rules:
       - 'c:sshd -T -> r:^\s*LogLevel\s+INFO|^\s*LogLevel\s*VERBOSE|^\s*loglevel\s+INFO|^\s*loglevel\s+VERBOSE'
-      - 'not f:/etc/ssh/sshd_config -> r:^\s*LogLevel\s+ && !r:^\s*\t*LogLevel\s+INFO|^\s*\t*LogLevel\s+VERBOSE|^\s*\t*LogLevel\t+INFO|^\s*\t*LogLevel\t+VERBOSE'
-      - 'not d:/etc/ssh/sshd_config.d/ -> r:\.*.conf$ -> r:^\s*LogLevel\s+ && >!r:^\s*\t*LogLevel\s+INFO|^\s*\t*LogLevel\s+VERBOSE|^\s*\t*LogLevel\t+INFO|^\s*\t*LogLevel\t+VERBOSE'
+      - 'not f:/etc/ssh/sshd_config -> r:^\s*LogLevel && !r:^\s*\t*LogLevel\s+INFO|^\s*\t*LogLevel\s+VERBOSE|^\s*\t*LogLevel\t+INFO|^\s*\t*LogLevel\t+VERBOSE'
+      - 'not d:/etc/ssh/sshd_config.d/ -> r:\.*.conf$ -> r:^\s*LogLevel && >!r:^\s*\t*LogLevel\s+INFO|^\s*\t*LogLevel\s+VERBOSE|^\s*\t*LogLevel\t+INFO|^\s*\t*LogLevel\t+VERBOSE'
 
   # 4.2.6 Ensure SSH PAM is enabled. (Automated)
   - id: 2620
