Test of Entry converter added

--- a/src/engine/source/router/CMakeLists.txt
+++ b/src/engine/source/router/CMakeLists.txt
@@ -64,10 +64,11 @@ if(ENGINE_BUILD_TEST)
 
     # Router unit test
     add_executable(router_utest
+        ${UNIT_SRC_DIR}/entryConverter_test.cpp
         ${UNIT_SRC_DIR}/environment_test.cpp
-        ${UNIT_SRC_DIR}/table_test.cpp
         ${UNIT_SRC_DIR}/environmentBuilder_test.cpp
         ${UNIT_SRC_DIR}/router_test.cpp
+        ${UNIT_SRC_DIR}/table_test.cpp
     )
     target_include_directories(router_utest PRIVATE ${SRC_DIR})
     target_link_libraries(router_utest
