--- a/src/engine/test/CMakeLists.txt
+++ b/src/engine/test/CMakeLists.txt
@@ -15,10 +15,10 @@ CPMAddPackage(
 
 include(GoogleTest)
 
+# TODO: deprecated, move tests to specific modules
 add_subdirectory(${TEST_SOURCE_DIR}/mocks)
 add_subdirectory(${TEST_SOURCE_DIR}/base)
 add_subdirectory(${TEST_SOURCE_DIR}/defs)
-add_subdirectory(${TEST_SOURCE_DIR}/schemf)
 add_subdirectory(${TEST_SOURCE_DIR}/builder)
 add_subdirectory(${TEST_SOURCE_DIR}/cmds)
 add_subdirectory(${TEST_SOURCE_DIR}/hlp)
