--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -167,7 +167,8 @@ add_subdirectory(${ENGINE_SOURCE_DIR}/rbac)
 add_subdirectory(${ENGINE_SOURCE_DIR}/api)
 add_subdirectory(${ENGINE_SOURCE_DIR}/defs)
 add_subdirectory(${ENGINE_SOURCE_DIR}/schemf)
-add_subdirectory(${ENGINE_SOURCE_DIR}/builder)
+add_subdirectory(${ENGINE_SOURCE_DIR}/schemval)
+# add_subdirectory(${ENGINE_SOURCE_DIR}/builder)
 add_subdirectory(${ENGINE_SOURCE_DIR}/builder2)
 add_subdirectory(${ENGINE_SOURCE_DIR}/parsec)
 add_subdirectory(${ENGINE_SOURCE_DIR}/hlp)
