--- a/src/engine/source/schemf/CMakeLists.txt
+++ b/src/engine/source/schemf/CMakeLists.txt
@@ -27,10 +27,24 @@ if(ENGINE_BUILD_TEST)
 
 set(TEST_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/test/src)
 set(TEST_MOCK_DIR ${CMAKE_CURRENT_LIST_DIR}/test/mocks)
+set(UNIT_SRC_DIR ${TEST_SRC_DIR}/unit)
+set(COMPONENT_SRC_DIR ${TEST_SRC_DIR}/component)
 
 add_library(schemf_mocks INTERFACE)
 target_include_directories(schemf_mocks INTERFACE ${TEST_MOCK_DIR})
 target_link_libraries(schemf_mocks INTERFACE gmock schemf::ischema)
 add_library(schemf::mocks ALIAS schemf_mocks)
+
+add_executable(schemf_utest
+    ${UNIT_SRC_DIR}/field_test.cpp
+)
+target_link_libraries(schemf_utest PRIVATE schemf schemval gtest_main)
+gtest_discover_tests(schemf_utest)
+
+add_executable(schemf_ctest
+    ${COMPONENT_SRC_DIR}/schema_test.cpp
+)
+target_link_libraries(schemf_ctest PRIVATE schemf schemval gtest_main)
+gtest_discover_tests(schemf_ctest)
 
 endif(ENGINE_BUILD_TEST)
